[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[examples]
lang = "./examples/lang.rs"

[dependencies]
syn = "1"
quote = "1"

[dev-dependencies]
lr = { path = ".." }
